--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             margin:auto;
             font-size: 19px;
             color: white;
+            text-align: center;
         }
 
         .buttons {
